# patent-rag-system

./: .env.example  .env.prod.example  .env.production.example  .env.scraper  .gitignore  CLAUDE.md  DEPLOYMENT.md  DEV_SETUP.md  Dockerfile  README.md  deploy-to-vps.sh  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.scraper.yml  docker-compose.yml  init-patent-data.sh  pyproject.toml  start.md
config/: settings.py  urls.py
data/: README.md  bulk_download_links.json  how_to_crawl.md  mock_links.json
data/test_download/: 104122253.xml
data/test_patent_downloads/111/vol49_iss36/: 105106830.xml  105117876.xml
logs/: .7c52d574a6a330e9bfb4c89a5589a18ed1767c3e-audit.json  .c2a8c93ebaffd8aded500bc9b8b53100cd9f6ca2-audit.json
rag/: apps.py  serializers.py  urls.py  views.py
rag/management/commands/: build_index.py  process_docs.py  scrape_docs.py  test_query.py
rag/services/: document_processor.py  embedding_service.py  patent_scraper_template.py  rag_engine.py  scraper.py  tipo_ftp_downloader.py  tipo_ftps_downloader.py  tipo_web_scraper.py  tipo_xml_parser.py
rag/static/rag/css/: style.css
rag/templates/rag/: base.html  health.html  index.html
